--- a/src/tests/bundles/focal-victoria.yaml
+++ b/src/tests/bundles/focal-victoria.yaml
@@ -1,3 +1,5 @@
+local_overlay_enabled: False
+
 variables:
   openstack-origin: &openstack-origin cloud:focal-victoria
 
@@ -38,29 +40,29 @@ machines:
 services:
 
   manila-mysql-router:
-    charm: cs:~openstack-charmers/mysql-router
-    channel: candidate
+    charm: ch:mysql-router
+    channel: 8.0/edge
   manila-ganesha-mysql-router:
-    charm: cs:~openstack-charmers/mysql-router
-    channel: candidate
+    charm: ch:mysql-router
+    channel: 8.0/edge
   keystone-mysql-router:
-    charm: cs:~openstack-charmers/mysql-router
-    channel: candidate
+    charm: ch:mysql-router
+    channel: 8.0/edge
   neutron-api-mysql-router:
-    charm: cs:~openstack-charmers/mysql-router
-    channel: candidate
+    charm: ch:mysql-router
+    channel: 8.0/edge
   nova-cloud-controller-mysql-router:
-    charm: cs:~openstack-charmers/mysql-router
-    channel: candidate
+    charm: ch:mysql-router
+    channel: 8.0/edge
   glance-mysql-router:
-    charm: cs:~openstack-charmers/mysql-router
-    channel: candidate
+    charm: ch:mysql-router
+    channel: 8.0/edge
   placement-mysql-router:
-    charm: cs:~openstack-charmers/mysql-router
-    channel: candidate
+    charm: ch:mysql-router
+    channel: 8.0/edge
 
   mysql-innodb-cluster:
-    charm: cs:~openstack-charmers/mysql-innodb-cluster
+    charm: ch:mysql-innodb-cluster
     num_units: 3
     options:
       source: *openstack-origin
@@ -68,30 +70,36 @@ services:
       - '0'
       - '1'
       - '2'
-    channel: candidate
+    channel: 8.0/edge
 
   manila-ganesha-az1:
     num_units: 3
-    charm: ../../../manila-ganesha
+    charm: ../../../manila-ganesha.charm
     options:
       openstack-origin: *openstack-origin
+      debug: True
     to:
       - '3'
       - '4'
       - '5'
 
+  hacluster:
+    charm: ch:hacluster
+    num_units: 0
+    channel: 2.0.3/edge
+
   ceph-mon:
-    charm: cs:~openstack-charmers/ceph-mon
+    charm: ch:ceph-mon
     num_units: 3
     options:
       source: *openstack-origin
     to:
       - '6'
       - '7'
-    channel: candidate
+    channel: pacific/edge
 
   ceph-osd:
-    charm: cs:~openstack-charmers/ceph-osd
+    charm: ch:ceph-osd
     num_units: 3
     options:
       source: *openstack-origin
@@ -101,50 +109,51 @@ services:
       - '8'
       - '9'
       - '10'
-    channel: candidate
+    channel: pacific/edge
 
   ceph-fs:
-    charm: cs:~openstack-charmers/ceph-fs
+    charm: ch:ceph-fs
     num_units: 2
     options:
       source: *openstack-origin
     to:
       - '11'
       - '12'
-    channel: candidate
+    channel: pacific/edge
 
   manila:
-    charm: cs:~openstack-charmers/manila
+    charm: ch:manila
     num_units: 1
     options:
       default-share-backend: cephfsnfs1
       share-protocols: NFS
       openstack-origin: *openstack-origin
+      debug: True
     to:
       - '13'
-    channel: candidate
+    channel: victoria/edge
 
   nova-cloud-controller:
-    charm: cs:~openstack-charmers/nova-cloud-controller
+    charm: ch:nova-cloud-controller
     num_units: 1
     options:
       network-manager: Neutron
       openstack-origin: *openstack-origin
     to:
       - '14'
-    channel: candidate
+    channel: victoria/edge
 
   placement:
-    charm: cs:~openstack-charmers/placement
+    charm: ch:placement
     num_units: 1
     options:
       openstack-origin: *openstack-origin
     to:
       - '15'
-    channel: candidate
+    channel: victoria/edge
 
   nova-compute:
-    charm: cs:~openstack-charmers/nova-compute
+    charm: ch:nova-compute
     num_units: 2
     options:
       config-flags: default_ephemeral_format=ext4
@@ -155,19 +164,19 @@ services:
     to:
       - '16'
       - '17'
-    channel: candidate
+    channel: victoria/edge
 
   glance:
-    charm: cs:~openstack-charmers/glance
+    charm: ch:glance
     num_units: 1
     options:
       openstack-origin: *openstack-origin
     to:
       - '18'
-    channel: candidate
+    channel: victoria/edge
 
   neutron-api:
-    charm: cs:~openstack-charmers/neutron-api
+    charm: ch:neutron-api
     num_units: 1
     options:
       manage-neutron-plugin-legacy-mode: true
@@ -177,39 +186,39 @@ services:
       openstack-origin: *openstack-origin
     to:
       - '19'
-    channel: candidate
+    channel: victoria/edge
 
   neutron-openvswitch:
-    charm: cs:~openstack-charmers/neutron-openvswitch
-    channel: candidate
+    charm: ch:neutron-openvswitch
+    channel: victoria/edge
 
   neutron-gateway:
-    charm: cs:~openstack-charmers/neutron-gateway
+    charm: ch:neutron-gateway
     num_units: 1
     options:
       bridge-mappings: physnet1:br-ex
       openstack-origin: *openstack-origin
     to:
       - '20'
-    channel: candidate
+    channel: victoria/edge
 
   rabbitmq-server:
-    charm: cs:~openstack-charmers/rabbitmq-server
+    charm: ch:rabbitmq-server
     num_units: 1
     options:
       source: *openstack-origin
     to:
       - '21'
-    channel: candidate
+    channel: 3.8/edge
 
   keystone:
-    charm: cs:~openstack-charmers/keystone
+    charm: ch:keystone
     num_units: 1
     options:
       openstack-origin: *openstack-origin
     to:
       - '22'
-    channel: candidate
+    channel: victoria/edge
 
 relations:
 
@@ -328,3 +337,6 @@ relations:
 
   - - 'nova-cloud-controller:quantum-network-service'
     - 'neutron-gateway:quantum-network-service'
+
+  - - manila-ganesha-az1
+    - hacluster
